mudei pra utf-8 pra rodar no overleaf

--- a/imagens/fluxo-esquema.tex
+++ b/imagens/fluxo-esquema.tex
@@ -9,7 +9,7 @@
     \textit{baseada em fluxo}
   \end{tabular}
 };
-\homem [h,] {left=1 of e, label=below:or·culo}
+\homem [h,] {left=1 of e, label=below:or√°culo}
 \node (xy) [left=2 of h,draw, circle, inner sep=2, thick, top color=blue!30, bottom color=blue!30, middle color=white] {$\langle \bm{x},y\rangle$};
 \modeloprob [m,, { }] {below = 2 of h.south}
 
