--- a/imagens/memquerysyn-esquema.tex
+++ b/imagens/memquerysyn-esquema.tex
@@ -8,7 +8,7 @@
   \end{tabular}
 };
 \node (x)  [left= 1 of e,draw, circle, inner sep=2, thick, top color=orange!30, bottom color=orange!30, middle color=white] {$\langle \bm{x},\_\rangle$};
-\homem [h,] {left=1 of x, label=below:or·culo}
+\homem [h,] {left=1 of x, label=below:or√°culo}
 \node (xy) [left=2 of h,draw, circle, inner sep=2, thick, top color=blue!30, bottom color=blue!30, middle color=white] {$\langle \bm{x},y\rangle$};
 \modelovs [m,, { }] {below = 2 of h.south}
 
