--- a/imagens/poolbased-esquema.tex
+++ b/imagens/poolbased-esquema.tex
@@ -8,7 +8,7 @@
     \textit{sampling}
   \end{tabular}
 };
-\homem [h,] {left=1 of e, label=below:or·culo}
+\homem [h,] {left=1 of e, label=below:or√°culo}
 \node (xy) [left=2 of h,draw, circle, inner sep=2, thick, top color=blue!30, bottom color=blue!30, middle color=white] {$\langle \bm{x},y\rangle$};
 \modeloprob [m,, { }] {below = 2 of h.south}
 
