--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 
 \newcommand{\meutitulo}{Aprendizado ativo ... }
 \newcommand{\meunome}{Davi Pereira dos Santos}
-\newcommand{\meuorientador}{Prof. Dr. André Carlos Ponce de Leon Ferreira de Carvalho}
+\newcommand{\meuorientador}{Prof. Dr. AndrÃ© Carlos Ponce de Leon Ferreira de Carvalho}
 \newcommand{\minhadata}{Dezembro/2014}
 \newcommand{\minhabolsa}{Trabalho realizado com o apoio da CAPES.}
 \newcommand{\meugrau}{Doutor}
@@ -44,18 +44,18 @@
 \usepackage{subfigure}
 %%\usepackage{epigraph}
 %%\usepackage{endnotes}
-%\renewcommand{\notesname}{Comentários}
+%\renewcommand{\notesname}{ComentÃ¡rios}
 \usepackage{natbib}
 \usepackage{latexsym}
 \usepackage{setspace}
 \usepackage{xspace}
 % \usepackage[nohyperlinks]
-%%% referencias com página \vref
+%%% referencias com pÃ¡gina \vref
 \usepackage[brazil]{varioref}
 \usepackage{indentfirst}
 %%% figuras um ao lado do outro
 \usepackage{subfigure}
-%%% definir títulos de seção
+%%% definir tÃ­tulos de seÃ§Ã£o
 \usepackage[sf,sl,outermarks]{titlesec}
 \titleformat{\section}{\color{black}\normalfont\Large\bfseries}{\color{darkgray}\thesection}{1em}{}
 \titleformat{\subsection}{\color{black}\normalfont\bfseries}{\color{darkgray}\thesubsection}{1em}{}
@@ -70,7 +70,7 @@
   \geometry{a4paper,left=3cm,right=2cm,top=2.0cm,bottom=2cm,twoside}
 
 %%% cria links no arquivo .pdf
-%%% comentar as linhas na versão para impressao
+%%% comentar as linhas na versÃ£o para impressao
 \usepackage[pdftex,pdfpagelabels,pagebackref,pageanchor=false]{hyperref}
 
 % % Para imprimir PDFs com offset
@@ -138,13 +138,13 @@
     \dp0=0in\ht0=0in\box0}}
 
 \include{macros}
-% \usepackage{parallel} % para as equações de medidas multilabel
+% \usepackage{parallel} % para as equaÃ§Ãµes de medidas multilabel
 
 %%%%%%%%%%%%%%%% FORMATACAO DE PALAVRAS %%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\nf }[1] % nome de ferramenta
     {\textsc{#1}}
-\newcommand{\pe }[1] % termo em inglês
+\newcommand{\pe }[1] % termo em inglÃªs
     {\textit{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -192,15 +192,15 @@
 
 % \usepackage{glosstex}
 \usepackage[printonlyused,withpage]{acronym}
-
-\usepackage{doi}
-\usepackage{pbox}
-\usepackage{amsfonts}
-\usepackage{icomma}
-
+% 
+% \usepackage{doi}
+% \usepackage{amsfonts}
+% \usepackage{pbox}
+% \usepackage{icomma}
+% 
 \usepackage{pdflscape}
 \usepackage{afterpage}
-\usepackage{capt-of}
+% \usepackage{capt-of}
 
 
 \begin{document}
@@ -210,8 +210,8 @@
 \newcommand{\titulo}{\meutitulo}
 \newcommand{\autor}{\meunome}
 \newcommand{\orientador}{\meuorientador}
-\newcommand{\nota}{Tese apresentada ao Instituto de Ciências Matemáticas e de Computação - ICMC-USP, para o Exame de Qualificação, como parte dos requisitos necessários à obtenção do título de \meugrau\xspace em Ciências de Computação e Matemática Computacional.}
-%\newcommand{\nota}{Monografia apresentada à disciplina de Metodologia de Pesquisa Científica em Inteligência Artificial, no Instituto de Ciências Matemáticas e de Computação - ICMC-USP, como parte dos requisitos necessários à obtenção dos créditos relacionados à disciplina.}
+\newcommand{\nota}{Tese apresentada ao Instituto de CiÃªncias MatemÃ¡ticas e de ComputaÃ§Ã£o - ICMC-USP, para o Exame de QualificaÃ§Ã£o, como parte dos requisitos necessÃ¡rios Ã  obtenÃ§Ã£o do tÃ­tulo de \meugrau\xspace em CiÃªncias de ComputaÃ§Ã£o e MatemÃ¡tica Computacional.}
+%\newcommand{\nota}{Monografia apresentada Ã  disciplina de Metodologia de Pesquisa CientÃ­fica em InteligÃªncia Artificial, no Instituto de CiÃªncias MatemÃ¡ticas e de ComputaÃ§Ã£o - ICMC-USP, como parte dos requisitos necessÃ¡rios Ã  obtenÃ§Ã£o dos crÃ©ditos relacionados Ã  disciplina.}
 
 \newcommand{\data}{\minhadata}
 \newcommand{\comentario}{\minhabolsa}
@@ -237,7 +237,7 @@
 \begin{acronym}
 \acro{$ID$}{densidade de informação}
 % $TU$ utilidade de treinamento
-% $d(\bm{x},\bm{u})$ medida de distância
+% $d(\bm{x},\bm{u})$ medida de distÃ¢ncia
 % $sim(\bm{x},\bm{u})$ medida de similaridade
 \end{acronym}
 \cleardoublepage
