--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt,twoside]{book}
- 
+\usepackage{etex}
+
 \usepackage{scrextend}
 % \usepackage{cite}
 % \usepackage[pdftex]{graphicx}
