--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 
 \newcommand{\meutitulo}{Aprendizado ativo ... }
 \newcommand{\meunome}{Davi Pereira dos Santos}
-\newcommand{\meuorientador}{Prof. Dr. AndrÃ© Carlos Ponce de Leon Ferreira de Carvalho}
+\newcommand{\meuorientador}{Prof. Dr. André Carlos Ponce de Leon Ferreira de Carvalho}
 \newcommand{\minhadata}{Dezembro/2014}
 \newcommand{\minhabolsa}{Trabalho realizado com o apoio da CAPES.}
 \newcommand{\meugrau}{Doutor}
@@ -211,7 +211,7 @@
 \newcommand{\titulo}{\meutitulo}
 \newcommand{\autor}{\meunome}
 \newcommand{\orientador}{\meuorientador}
-\newcommand{\nota}{Tese apresentada ao Instituto de CiÃªncias MatemÃ¡ticas e de ComputaÃ§Ã£o - ICMC-USP, para o Exame de QualificaÃ§Ã£o, como parte dos requisitos necessÃ¡rios Ã  obtenÃ§Ã£o do tÃ­tulo de \meugrau\xspace em CiÃªncias de ComputaÃ§Ã£o e MatemÃ¡tica Computacional.}
+\newcommand{\nota}{Tese apresentada ao Instituto de Ciências Matemáticas e de ComputaÃ§Ã£o - ICMC-USP, para o Exame de QualificaÃ§Ã£o, como parte dos requisitos necessÃ¡rios Ã  obtenÃ§Ã£o do tÃ­tulo de \meugrau\xspace em Ciências de Computação e Matemática Computacional.}
 %\newcommand{\nota}{Monografia apresentada Ã  disciplina de Metodologia de Pesquisa CientÃ­fica em InteligÃªncia Artificial, no Instituto de CiÃªncias MatemÃ¡ticas e de ComputaÃ§Ã£o - ICMC-USP, como parte dos requisitos necessÃ¡rios Ã  obtenÃ§Ã£o dos crÃ©ditos relacionados Ã  disciplina.}
 
 \newcommand{\data}{\minhadata}
