--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -1,4 +1,5 @@
 \section{Análise comparativa}\label{comparativa}
+\usetikzlibrary{external}
 Há aplicações cujas particularidades ou preferências do especialista determinam
 previamente o algoritmo de aprendizado. \ano{exemplos?}
 Nessas aplicações, o algoritmo do classificador coincide com o algoritmo do aprendiz.
