--- a/imagens/macros-pgf.tex
+++ b/imagens/macros-pgf.tex
@@ -1,4 +1,5 @@
 \usepackage{pgfplots,bm}
+\usetikzlibrary{external}
 \usetikzlibrary{plotmarks}
 \usetikzlibrary{scopes,shapes,shadows,calc,arrows,shapes.symbols,automata,decorations.pathmorphing,backgrounds,fit,positioning}
 
