Update on Overleaf.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -964,7 +964,7 @@ year = {2006}
 @InProceedings{santos2014viabilidade,
   title={Viabilidade do Aprendizado Ativo em M{\'a}quinas Extremas},
   author={Davi P. Santos and Andr{\'e} CPLF Carvalho},
-  booktitle={Brazilian Conference on Intelligent Systems and Encontro Nacional de Inteligência Artificial e Computacional},
+  booktitle={Brazilian Conference on Intelligent Systems and Encontro Nacional de InteligÃªncia Artificial e Computacional},
   year =        "2014",
 }
 
@@ -1599,10 +1599,10 @@ keywords = "Meta-learning systems "
 
 @InProceedings{prud2011,
   title =       "Meta-learning to optimize the number of hidden nodes of MLP networks trained by Extreme Learning Machine algorithm",
-  author =      "Lucas, T., Prudêncio, R. B. C., Ludermir, T. B., and Soares, C.",
+  author =      "Lucas, T., PrudÃªncio, R. B. C., Ludermir, T. B., and Soares, C.",
   bibdate =     "",
   booktitle =   "CBIC2011",
-  booktitle =   "Proceedings of the X Congresso Brasileiro de Intelig{ê}ncia Computacional",
+  booktitle =   "Proceedings of the X Congresso Brasileiro de Intelig{Ãª}ncia Computacional",
   publisher =   "",
   year =        "2011",
   editor =      "",
