--- a/apendice1.tex
+++ b/apendice1.tex
@@ -68,12 +68,12 @@ rotulados
 humano, como um teste químico ou um robô seguindo coordenadas, \textit{membership querysynthesis}
 mostra-se uma abordagem promissora \citep{cohn1996active}.
 
-\begin{figure} %[H]
-    \centering
-    \scalebox{.75}{\input{imagens/memquerysyn-esquema.tex}}
-    \caption{\textit{Membership query synthesis}: as consultas ao oráculo são criadas sob medida.}
-    \label{fig:memquerysyn}
-\end{figure}
+% \begin{figure} %[H]
+%     \centering
+%     \scalebox{.75}{\input{imagens/memquerysyn-esquema.tex}}
+%     \caption{\textit{Membership query synthesis}: as consultas ao oráculo são criadas sob medida.}
+%     \label{fig:memquerysyn}
+% \end{figure}
 
 \section*{\textit{Pool-based sampling}}
 Muitos problemas proveem grande quantidade de exemplos de uma só vez. Eles são a motivação da
@@ -83,12 +83,12 @@ normalmente é possível analisar todos os exemplos não rotulados a qualquer mo
 disponíveis num repositório conforme pode ser visto na Figura \ref{fig:poolbased}.
 Uma análise típica consiste em extrair alguma medida informativa de cada exemplo.
 
-\begin{figure} %[H]
-    \centering
-    \input{imagens/poolbased-esquema.tex}
-    \caption{\textit{Pool-based sampling}: o aprendiz ativo tem livre acesso ao repositório.}
-    \label{fig:poolbased}
-\end{figure}
+% \begin{figure} %[H]
+%     \centering
+%     \input{imagens/poolbased-esquema.tex}
+%     \caption{\textit{Pool-based sampling}: o aprendiz ativo tem livre acesso ao repositório.}
+%     \label{fig:poolbased}
+% \end{figure}
 
 Muitas aplicações são adequadas a esse cenário, sendo que a classificação de textos
 \citep{mccallum1998employing} tem recebido maior destaque por requerer esforço humano na
@@ -123,13 +123,13 @@ computacionais durante o processo decisório a respeito da necessidade de rotula
 exemplo.
 A amostragem baseada em fluxo é ilustrada na Figura \ref{fig:fluxoquery}.
 
-\begin{figure} %[H]
-    \centering
-    \input{imagens/fluxo-esquema.tex}
-    \caption{Amostragem seletiva baseada em fluxo: todo novo exemplo não consultado precisa ser
-descartado.}
-    \label{fig:fluxoquery}
-\end{figure}
+% \begin{figure} %[H]
+%     \centering
+%     \input{imagens/fluxo-esquema.tex}
+%     \caption{Amostragem seletiva baseada em fluxo: todo novo exemplo não consultado precisa ser
+% descartado.}
+%     \label{fig:fluxoquery}
+% \end{figure}
 
 É importante observar a diferenciação feita por \cite{zliobaite2011active} entre
 \textit{aprendizado ativo online}\footnote{[\textit{online active learning}]
